Adicionando aplicação MVC com Identity + Fluent-NHibernate

--- a/src/Eluander.Presentation.MVC/Views/Home/Index.cshtml
+++ b/src/Eluander.Presentation.MVC/Views/Home/Index.cshtml
@@ -1,8 +1,27 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@{ ViewData["Title"] = "Início"; }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem vindo - <a href="https://github.com/Eluander/aspnet-core-identity-fluentnhib">Github</a></h1>
 </div>
+
+<p class="">Essa é uma configuração base com objetivo didático, para ensinar a implementação inicial do:</p>
+<ul class="">
+    <li>ASP.NET CORE 3.1</li>
+    <li>Identity (Autenticação e Autorização)</li>
+    <li>Fluent-NHibernate (ORM)</li>
+    <li>PostgreSQL (Base de dados)</li>
+    <li>Simple Migration</li>
+    <li>Domain Driven Design (DDD)</li>
+</ul>
+<br />
+<p class="text-danger font-weight-bold">Extras:</p>
+<ul class="text">
+    <li>Login externo com <mark>Google</mark> (Oauth2).</li>
+    <li><s>JWT (JSON Web Tokens)</s> <small class="text-danger blink_me">próxima aula</small></li>
+    <li><s>Swagger (Documentações de API)</s> <small class="text-danger blink_me">próxima aula</small></li>
+</ul>
+<hr />
+<p class="text-center">
+    Esse é um projeto publico é pode ser uma boa base para ajudar a compreender o funcionamento dessas ferramentas e
+    até mesmo iniciarem seus proprios projetos. Em caso de dúvidas contate-me pelo <a href="https://eluander.com.br">meu site</a>.
+</p>
