--- a/src/Eluander.Presentation.MVC/wwwroot/css/site.css
+++ b/src/Eluander.Presentation.MVC/wwwroot/css/site.css
@@ -69,3 +69,13 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.blink_me {
+    animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
+}
