Habilitando o Envio de Emails.

--- a/src/Eluander.Presentation.MVC/Views/Home/Index.cshtml
+++ b/src/Eluander.Presentation.MVC/Views/Home/Index.cshtml
@@ -17,6 +17,8 @@
 <p class="text-danger font-weight-bold">Extras:</p>
 <ul class="text">
     <li>Login externo com <mark>Google</mark> (Oauth2).</li>
+    <li>Enviar e-mail de confirmação.</li>
+    <li>Ativação do <code>TempData | ViewBag | ViewData</code>.</li>
     <li><s>JWT (JSON Web Tokens)</s> <small class="text-danger blink_me">próxima aula</small></li>
     <li><s>Swagger (Documentações de API)</s> <small class="text-danger blink_me">próxima aula</small></li>
 </ul>
