Foi incluída a autenticação via JWT.

--- a/src/Eluander.Presentation.MVC/Views/Home/Index.cshtml
+++ b/src/Eluander.Presentation.MVC/Views/Home/Index.cshtml
@@ -19,9 +19,10 @@
     <li>Login externo com <mark>Google</mark> (Oauth2).</li>
     <li>Enviar e-mail de confirmação.</li>
     <li>Ativação do <code>TempData | ViewBag | ViewData</code>.</li>
-    <li><s>JWT (JSON Web Tokens)</s> <small class="text-danger blink_me">próxima aula</small></li>
+    <li>JWT (JSON Web Tokens)</li>
     <li><s>Swagger (Documentações de API)</s> <small class="text-danger blink_me">próxima aula</small></li>
 </ul>
+<br /><br />
 <hr />
 <p class="text-center">
     Esse é um projeto publico é pode ser uma boa base para ajudar a compreender o funcionamento dessas ferramentas e
