--- a/src/Eluander.Presentation.MVC/Views/Home/Index.cshtml
+++ b/src/Eluander.Presentation.MVC/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     <li>Enviar e-mail de confirmação.</li>
     <li>Ativação do <code>TempData | ViewBag | ViewData</code>.</li>
     <li>JWT (JSON Web Tokens)</li>
-    <li><s>Swagger (Documentações de API)</s> <small class="text-danger blink_me">próxima aula</small></li>
+    <li>Swagger (Documentações de API) - <a href="/doc">DOC</a></li>
 </ul>
 <br /><br />
 <hr />
