--- a/src/Eluander.Presentation.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Eluander.Presentation.MVC/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
                         </li>
-                        @*<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Email" asp-action="Index">E-mail</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
