--- a/src/Eluander.Presentation.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Eluander.Presentation.MVC/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" href="/doc">Documentações</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Email" asp-action="Index">E-mail</a>
                         </li>
                     </ul>
