Upgrade para .NET 5

--- a/src/Eluander.Presentation.MVC/Views/Home/Index.cshtml
+++ b/src/Eluander.Presentation.MVC/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <p class="">Essa é uma configuração base com objetivo didático, para ensinar a implementação inicial do:</p>
 <ul class="">
-    <li>ASP.NET CORE 3.1</li>
+    <li>.NET 5</li>
     <li>Identity (Autenticação e Autorização)</li>
     <li>Fluent-NHibernate (ORM)</li>
     <li>PostgreSQL (Base de dados)</li>
